--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-l.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pogba</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <header>titulo</header>
+            <h1>Paul Pogba ● French Genius ● Goals & Skills HD
+            </h1>
+        </div>
+
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/s-exVbMRW3o?si=0mY7bqEPC1f_OYct" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+</body>
+</html>
