--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pogba</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bokor&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,6 +19,14 @@
 
         <div class="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/s-exVbMRW3o?si=0mY7bqEPC1f_OYct" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="categoria">
+        <h2>Outros vídeos</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/watch?v=Kq7gwEN6bTs">
+                <img src="https://img.youtube.com/vi/Kq7gwEN6bTs/maxresdefault.jpg" alt="">
+            </a>
         </div>
     </section>
 </body>
