--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             <a href="https://www.youtube.com/watch?v=Kq7gwEN6bTs">
                 <img src="https://img.youtube.com/vi/Kq7gwEN6bTs/maxresdefault.jpg" alt="">
             </a>
+            <a href="https://www.youtube.com/watch?v=oMpozVWERe4">
+                <img src="https://img.youtube.com/vi/oMpozVWERe4/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=WG9NM8SdiiA">
+                <img src="https://img.youtube.com/vi/WG9NM8SdiiA/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=obAOyosx0fk">
+                <img src="https://img.youtube.com/vi/obAOyosx0fk/maxresdefault.jpg" alt="">
+            </a>
+            <a href="https://www.youtube.com/watch?v=Izh-_dGp7Lw">
+                <img src="https://img.youtube.com/vi/Izh-_dGp7Lw/maxresdefault.jpg" alt="">
+            </a>
         </div>
     </section>
 </body>
